2003-04-01 Wari Wahab <wari at home dot wari dot org>
	* Definitely not an all fools day joke. Moved entryparsers to the much
	  cleaner and unified callback mechanisms. Callback added -
	  entryparser

2003-03-28 Wari Wahab <wari at home dot wari dot org>
	* Moved preformatters to be plugins. This is a much cleaner approach
	  then what have been done previously. Callbacks added - preformat and
	  postformat
	
2003-03-26 Will Guaraldi <willg at bluesock dot org>
	* Re-wrote the callback chain mechanisms so it's a passive
	  registration chain like blosxom and it's more magical and
	  versatile.

2003-03-24 Will Guaraldi <willg at bluesock dot org>
	* Adjusted initialize_plugins to load plugins in the plugins
	  directory in alphanumeric order if the "load_plugins" key
	  is not set in the config file.  Otherwise we load the plugins
	  in the "load_plugins" list in the order they're listed.

2003-03-21  Theodore W. Leung  <twl@dev>
	* Updated the lucene.py plugin to take configuration parameters 
          from config.py.  Added documentation
	* Updated the logstats.py plugin to take configuration parameters
	  from config.py.  
	* Added support for plugins in the BlosxomRenderer.  These plugins
	  are based on the Perl blosxom 2.0 callbacks. 

2003-03-11 Blake Winston (with some followup from Will Guaraldi)
        * Introduced the EntryBase API and adjusted the code base so that
	  content can be dynamically created from whatever is handling
	  the URL.

2003-03-01 Will Guaraldi <willg at bluesock dot org>
	* Changes initialize_plugins(...) to load plugins listed in
	  the "load_plugins" key in the config file.  If no "load_plugins"
	  key is set, then we don't load any plugins.  We load plugins
	  in the order of the "load_plugins" list.

2003-02-16 Wari Wahab <pyblosxom@wari.per.sg>
	* Pyblosxom core rendering code can now use seperate renderers
	  defined by the user. This means that if a user wants to use other